// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`archetype parity guard: no-archetype output is frozen > Fighter 4 1`] = `
{
  "ac": {
    "cmb": 6,
    "cmd": 19,
    "flatFootedAC": 10,
    "normalAC": 12,
    "touchAC": 12,
  },
  "attackProfiles": {
    "melee": [],
    "ranged": [],
  },
  "attacks": {
    "melee": "**Standard Attack:** +7 (1d6+3) (18-20/x2)
**Full Attack:** +7 (1d6+3) (18-20/x2)",
    "ranged": "**Standard Attack:** +6 (1d8+0) (20/x3)
**Full Attack:** +6 (1d8+0) (20/x3)",
    "unarmed": "**Standard Attack:** +6 (1d3+3) (20/x2)
**Full Attack:** +6 (1d3+3) (20/x2)",
  },
  "bab": 4,
  "conditionEffects": {
    "acAdjust": 0,
    "buffNotes": "",
    "canAct": true,
    "canAttack": true,
    "canCast": true,
    "canFullRound": true,
    "canMove": true,
    "canStandard": true,
    "chaAdjust": 0,
    "chaSkillAdjust": 0,
    "cmb": 0,
    "cmd": 0,
    "conAdjust": 0,
    "conSkillAdjust": 0,
    "conditionNotes": "",
    "damageAdjust": 0,
    "dexAdjust": 0,
    "dexSkillAdjust": 0,
    "extraAttacks": [],
    "ffAcAdjust": 0,
    "flatFooted": false,
    "fortAdjust": 0,
    "helpless": false,
    "hpMaxAdjust": 0,
    "intAdjust": 0,
    "intSkillAdjust": 0,
    "levelAdjust": 0,
    "loseDexToAC": false,
    "meleeAtkAdjust": 0,
    "miss50": false,
    "movementAdjust": 1,
    "naturalArmorAdjust": 0,
    "perceptionAdjust": 0,
    "rangedAtkAdjust": 0,
    "reachAdjust": 0,
    "refAdjust": 0,
    "sizeAdjust": 0,
    "skillAdjust": 0,
    "strAdjust": 0,
    "strSkillAdjust": 0,
    "touchAcAdjust": 0,
    "willAdjust": 0,
    "wisAdjust": 0,
    "wisSkillAdjust": 0,
  },
  "hpMaxEffective": 0,
  "initiative": 2,
  "mods": {
    "cha": -1,
    "con": 1,
    "dex": 2,
    "int": 0,
    "str": 3,
    "wis": 0,
  },
  "movementMultiplier": 1,
  "saves": {
    "fort": 5,
    "ref": 3,
    "will": 1,
  },
  "scores": {
    "cha": 8,
    "con": 12,
    "dex": 14,
    "int": 10,
    "str": 16,
    "wis": 10,
  },
  "skills": [],
  "totalLevel": 4,
}
`;

exports[`archetype parity guard: no-archetype output is frozen > Monk (Unchained) 5 1`] = `
{
  "ac": {
    "cmb": 8,
    "cmd": 20,
    "flatFootedAC": 10,
    "normalAC": 13,
    "touchAC": 13,
  },
  "attackProfiles": {
    "melee": [],
    "ranged": [],
  },
  "attacks": {
    "melee": "**Standard Attack:** +7 (1d6+2) (18-20/x2)
**Full Attack:** +7 (1d6+2) (18-20/x2)",
    "ranged": "**Standard Attack:** +8 (1d8+0) (20/x3)
**Full Attack:** +8 (1d8+0) (20/x3)",
    "unarmed": "**Standard Attack:** +8 (1d8+2) (20/x2)
**Full Attack:** +8 (1d8+2) (20/x2)",
  },
  "bab": 5,
  "conditionEffects": {
    "acAdjust": 0,
    "buffNotes": "",
    "canAct": true,
    "canAttack": true,
    "canCast": true,
    "canFullRound": true,
    "canMove": true,
    "canStandard": true,
    "chaAdjust": 0,
    "chaSkillAdjust": 0,
    "cmb": 0,
    "cmd": 0,
    "conAdjust": 0,
    "conSkillAdjust": 0,
    "conditionNotes": "",
    "damageAdjust": 0,
    "dexAdjust": 0,
    "dexSkillAdjust": 0,
    "extraAttacks": [],
    "ffAcAdjust": 0,
    "flatFooted": false,
    "fortAdjust": 0,
    "helpless": false,
    "hpMaxAdjust": 0,
    "intAdjust": 0,
    "intSkillAdjust": 0,
    "levelAdjust": 0,
    "loseDexToAC": false,
    "meleeAtkAdjust": 0,
    "miss50": false,
    "movementAdjust": 1,
    "naturalArmorAdjust": 0,
    "perceptionAdjust": 0,
    "rangedAtkAdjust": 0,
    "reachAdjust": 0,
    "refAdjust": 0,
    "sizeAdjust": 0,
    "skillAdjust": 0,
    "strAdjust": 0,
    "strSkillAdjust": 0,
    "touchAcAdjust": 0,
    "willAdjust": 0,
    "wisAdjust": 0,
    "wisSkillAdjust": 0,
  },
  "hpMaxEffective": 0,
  "initiative": 3,
  "mods": {
    "cha": -1,
    "con": 1,
    "dex": 3,
    "int": 0,
    "str": 2,
    "wis": 3,
  },
  "movementMultiplier": 1,
  "saves": {
    "fort": 5,
    "ref": 7,
    "will": 4,
  },
  "scores": {
    "cha": 8,
    "con": 12,
    "dex": 16,
    "int": 10,
    "str": 14,
    "wis": 16,
  },
  "skills": [],
  "totalLevel": 5,
}
`;

exports[`archetype parity guard: no-archetype output is frozen > Paladin 4 / Fighter 3 multiclass 1`] = `
{
  "ac": {
    "cmb": 8,
    "cmd": 23,
    "flatFootedAC": 10,
    "normalAC": 12,
    "touchAC": 12,
  },
  "attackProfiles": {
    "melee": [],
    "ranged": [],
  },
  "attacks": {
    "melee": "**Standard Attack:** +11 (1d6+4) (18-20/x2)
**Full Attack:** +11/+6 (1d6+4) (18-20/x2)",
    "ranged": "**Standard Attack:** +8 (1d8+0) (20/x3)
**Full Attack:** +8/+3 (1d8+0) (20/x3)",
    "unarmed": "**Standard Attack:** +8 (1d3+4) (20/x2)
**Full Attack:** +8/+3 (1d3+4) (20/x2)",
  },
  "bab": 7,
  "conditionEffects": {
    "acAdjust": 0,
    "buffNotes": "",
    "canAct": true,
    "canAttack": true,
    "canCast": true,
    "canFullRound": true,
    "canMove": true,
    "canStandard": true,
    "chaAdjust": 0,
    "chaSkillAdjust": 0,
    "cmb": 0,
    "cmd": 0,
    "conAdjust": 0,
    "conSkillAdjust": 0,
    "conditionNotes": "",
    "damageAdjust": 0,
    "dexAdjust": 0,
    "dexSkillAdjust": 0,
    "extraAttacks": [],
    "ffAcAdjust": 0,
    "flatFooted": false,
    "fortAdjust": 0,
    "helpless": false,
    "hpMaxAdjust": 0,
    "intAdjust": 0,
    "intSkillAdjust": 0,
    "levelAdjust": 0,
    "loseDexToAC": false,
    "meleeAtkAdjust": 0,
    "miss50": false,
    "movementAdjust": 1,
    "naturalArmorAdjust": 0,
    "perceptionAdjust": 0,
    "rangedAtkAdjust": 0,
    "reachAdjust": 0,
    "refAdjust": 0,
    "sizeAdjust": 0,
    "skillAdjust": 0,
    "strAdjust": 0,
    "strSkillAdjust": 0,
    "touchAcAdjust": 0,
    "willAdjust": 0,
    "wisAdjust": 0,
    "wisSkillAdjust": 0,
  },
  "hpMaxEffective": 0,
  "initiative": 1,
  "mods": {
    "cha": 2,
    "con": 2,
    "dex": 1,
    "int": -1,
    "str": 4,
    "wis": 1,
  },
  "movementMultiplier": 1,
  "saves": {
    "fort": 11,
    "ref": 5,
    "will": 8,
  },
  "scores": {
    "cha": 14,
    "con": 14,
    "dex": 13,
    "int": 8,
    "str": 18,
    "wis": 12,
  },
  "skills": [],
  "totalLevel": 7,
}
`;

exports[`archetype parity guard: no-archetype output is frozen > Paladin 7 (caster, CHA saves, AC path) 1`] = `
{
  "ac": {
    "cmb": 8,
    "cmd": 23,
    "flatFootedAC": 10,
    "normalAC": 13,
    "touchAC": 13,
  },
  "attackProfiles": {
    "melee": [],
    "ranged": [],
  },
  "attacks": {
    "melee": "**Standard Attack:** +10 (1d6+3) (18-20/x2)
**Full Attack:** +10/+5 (1d6+3) (18-20/x2)",
    "ranged": "**Standard Attack:** +8 (1d8+0) (20/x3)
**Full Attack:** +8/+3 (1d8+0) (20/x3)",
    "unarmed": "**Standard Attack:** +8 (1d3+3) (20/x2)
**Full Attack:** +8/+3 (1d3+3) (20/x2)",
  },
  "bab": 7,
  "conditionEffects": {
    "acAdjust": 0,
    "buffNotes": "",
    "canAct": true,
    "canAttack": true,
    "canCast": true,
    "canFullRound": true,
    "canMove": true,
    "canStandard": true,
    "chaAdjust": 0,
    "chaSkillAdjust": 0,
    "cmb": 0,
    "cmd": 0,
    "conAdjust": 0,
    "conSkillAdjust": 0,
    "conditionNotes": "",
    "damageAdjust": 0,
    "dexAdjust": 0,
    "dexSkillAdjust": 0,
    "extraAttacks": [],
    "ffAcAdjust": 0,
    "flatFooted": false,
    "fortAdjust": 0,
    "helpless": false,
    "hpMaxAdjust": 0,
    "intAdjust": 0,
    "intSkillAdjust": 0,
    "levelAdjust": 0,
    "loseDexToAC": false,
    "meleeAtkAdjust": 0,
    "miss50": false,
    "movementAdjust": 1,
    "naturalArmorAdjust": 0,
    "perceptionAdjust": 0,
    "rangedAtkAdjust": 0,
    "reachAdjust": 0,
    "refAdjust": 0,
    "sizeAdjust": 0,
    "skillAdjust": 0,
    "strAdjust": 0,
    "strSkillAdjust": 0,
    "touchAcAdjust": 0,
    "willAdjust": 0,
    "wisAdjust": 0,
    "wisSkillAdjust": 0,
  },
  "hpMaxEffective": 0,
  "initiative": 1,
  "mods": {
    "cha": 3,
    "con": 2,
    "dex": 1,
    "int": 0,
    "str": 3,
    "wis": 0,
  },
  "movementMultiplier": 1,
  "saves": {
    "fort": 10,
    "ref": 6,
    "will": 8,
  },
  "scores": {
    "cha": 16,
    "con": 14,
    "dex": 12,
    "int": 10,
    "str": 16,
    "wis": 10,
  },
  "skills": [
    {
      "ability": "cha",
      "classSkill": true,
      "name": "Diplomacy",
      "otherMod": 0,
      "ranks": 5,
      "total": 11,
      "usesPerform": false,
    },
    {
      "ability": "wis",
      "classSkill": false,
      "name": "Perception",
      "otherMod": 0,
      "ranks": 3,
      "total": 3,
      "usesPerform": false,
    },
  ],
  "spellbook": {
    "casterLevel": 7,
    "castingStatBonus": 3,
    "levels": [
      {
        "dc": 13,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 14,
        "maxSlots": 2,
        "remaining": 2,
      },
      {
        "dc": 15,
        "maxSlots": 2,
        "remaining": 2,
      },
      {
        "dc": 16,
        "maxSlots": 1,
        "remaining": 1,
      },
      {
        "dc": 17,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 18,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 19,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 20,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 21,
        "maxSlots": 0,
        "remaining": 0,
      },
      {
        "dc": 22,
        "maxSlots": 0,
        "remaining": 0,
      },
    ],
    "paradigm": "prepared",
  },
  "totalLevel": 7,
}
`;
